[gd_scene load_steps=27 format=3 uid="uid://b4ljq4dxjxty0"]

[ext_resource type="Script" uid="uid://bgnabnuflvk4g" path="res://assets/scripts/menu.gd" id="1_0ujva"]
[ext_resource type="Shader" uid="uid://dmscx2lqifghv" path="res://assets/shaders/background.gdshader" id="1_8omcj"]
[ext_resource type="Texture2D" uid="uid://be785krfvd5jv" path="res://assets/images/logo.png" id="2_8aat6"]
[ext_resource type="Shader" uid="uid://ducib4xo3cx20" path="res://assets/shaders/circle_transition.gdshader" id="2_ji2u7"]
[ext_resource type="Shader" uid="uid://cnapc23v580g4" path="res://assets/shaders/tv-static.gdshader" id="2_pw4oi"]
[ext_resource type="Shader" uid="uid://hrh01cyiu7i0" path="res://assets/shaders/screen_shake.gdshader" id="2_u7y45"]
[ext_resource type="Shader" uid="uid://dktmwb2avc2ag" path="res://assets/shaders/vignette.gdshader" id="3_nf3ne"]
[ext_resource type="Script" uid="uid://cy2ptbipg5aos" path="res://assets/scripts/news_control.gd" id="3_q8r6g"]
[ext_resource type="PackedScene" uid="uid://cxhiuegl5auwh" path="res://assets/scenes/subscene/news_label.tscn" id="4_xuqax"]
[ext_resource type="FontFile" uid="uid://injx0ycimrcg" path="res://assets/fonts/Jersey25-Regular.ttf" id="5_l0v2w"]
[ext_resource type="Script" uid="uid://c6hjrw2jra580" path="res://assets/scripts/global/discord_manager.gd" id="5_pw4oi"]
[ext_resource type="Script" uid="uid://5k0feys4jhrj" path="res://assets/scripts/play_button.gd" id="6_l0v2w"]
[ext_resource type="Script" uid="uid://b4iy2vsaiyita" path="res://assets/scripts/xp_label.gd" id="7_0wlwb"]
[ext_resource type="Script" uid="uid://d3uq2cw1r2imv" path="res://assets/scripts/upgrade_menu_button.gd" id="8_ujvk5"]
[ext_resource type="Script" uid="uid://brtfhpn7v4pgt" path="res://assets/scripts/settings_menu_button.gd" id="9_0ujva"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1jjir"]
shader = ExtResource("2_ji2u7")
shader_parameter/circle_size = 1.05
shader_parameter/screen_width = 1920.0
shader_parameter/screen_height = 1080.0

[sub_resource type="Animation" id="Animation_1jjir"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_1jjir")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/circle_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.05]
}

[sub_resource type="Animation" id="Animation_ji2u7"]
resource_name = "circle_transition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_1jjir")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/circle_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00833333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.05, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iegxf"]
_data = {
&"RESET": SubResource("Animation_1jjir"),
&"circle_transition": SubResource("Animation_ji2u7")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ji2u7"]
shader = ExtResource("2_u7y45")
shader_parameter/ShakeStrength = 0.05
shader_parameter/FactorA = Vector2(100, 100)
shader_parameter/FactorB = Vector2(1, 1)
shader_parameter/magnitude = Vector2(0.01, 0.01)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u7y45"]
shader = ExtResource("2_pw4oi")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pw4oi"]
shader = ExtResource("3_nf3ne")
shader_parameter/alpha = 1.0
shader_parameter/inner_radius = 0.0
shader_parameter/outer_radius = 1.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8aat6"]
shader = ExtResource("1_8omcj")
shader_parameter/size = 25.0
shader_parameter/color1 = Vector4(0, 0, 0, 1)
shader_parameter/color2 = Vector4(0.01, 0.01, 0.01, 1)
shader_parameter/speed = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1jjir"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u7y45"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ji2u7"]

[node name="Main" type="Node"]
script = ExtResource("1_0ujva")

[node name="CircleTransition" type="ColorRect" parent="."]
z_index = 8
material = SubResource("ShaderMaterial_1jjir")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CircleTransitionPlayer" type="AnimationPlayer" parent="CircleTransition"]
libraries = {
&"": SubResource("AnimationLibrary_iegxf")
}

[node name="Shake" type="ColorRect" parent="."]
z_index = 9
material = SubResource("ShaderMaterial_ji2u7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Static" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_u7y45")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Vignette" type="ColorRect" parent="."]
z_index = 8
material = SubResource("ShaderMaterial_pw4oi")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="."]
self_modulate = Color(0.5, 0.5, 0.5, 1)
z_index = -3
material = SubResource("ShaderMaterial_8aat6")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0687983, 0.0687983, 0.0687983, 1)

[node name="Logo" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 121.0
offset_top = 119.0
offset_right = 643.0
offset_bottom = 315.0
texture = ExtResource("2_8aat6")
expand_mode = 1

[node name="DiscordManager" type="Node" parent="."]
script = ExtResource("5_pw4oi")
details = "Home"

[node name="NewsControl" type="Control" parent="."]
clip_children = 1
clip_contents = true
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1187.0
offset_top = 121.0
offset_right = -150.0
offset_bottom = 315.0
grow_horizontal = 0
script = ExtResource("3_q8r6g")

[node name="NewsControlTimer" type="Timer" parent="NewsControl"]
wait_time = 8.0

[node name="NewsLabel" parent="NewsControl" instance=ExtResource("4_xuqax")]
layout_mode = 1
offset_left = 518.5
offset_top = -38.0
offset_right = 902.5
offset_bottom = 13.0
text = "my homies aint cool"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 123.0
offset_top = 435.0
offset_right = 640.0
offset_bottom = 960.0

[node name="MenuItemContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="PlayButton" type="Button" parent="MarginContainer/MenuItemContainer"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("5_l0v2w")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_1jjir")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u7y45")
text = " PLAY"
alignment = 0
script = ExtResource("6_l0v2w")

[node name="UpgradeButton" type="Button" parent="MarginContainer/MenuItemContainer"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("5_l0v2w")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_1jjir")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ji2u7")
text = " UPGRADE"
alignment = 0
script = ExtResource("8_ujvk5")

[node name="SettingsButton" type="Button" parent="MarginContainer/MenuItemContainer"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("5_l0v2w")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_1jjir")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_u7y45")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u7y45")
text = " SETTINGS"
alignment = 0
script = ExtResource("9_0ujva")

[node name="XPLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.5)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 123.0
offset_top = -171.0
offset_right = 219.0
offset_bottom = -120.0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("5_l0v2w")
theme_override_font_sizes/font_size = 50
text = "XP 0"
vertical_alignment = 2
script = ExtResource("7_0wlwb")

[connection signal="timeout" from="NewsControl/NewsControlTimer" to="NewsControl" method="_on_news_control_timer_timeout"]
[connection signal="button_up" from="MarginContainer/MenuItemContainer/PlayButton" to="MarginContainer/MenuItemContainer/PlayButton" method="_on_button_up"]
[connection signal="button_up" from="MarginContainer/MenuItemContainer/UpgradeButton" to="MarginContainer/MenuItemContainer/UpgradeButton" method="_on_button_up"]
[connection signal="button_up" from="MarginContainer/MenuItemContainer/SettingsButton" to="MarginContainer/MenuItemContainer/SettingsButton" method="_on_button_up"]
